--- a/templates/newHeatmap.html
+++ b/templates/newHeatmap.html
@@ -3,10 +3,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
-        // pass in 'data' from flask and convert to a JSON form
-        var coordinatesData = '{{ data }}';
-    </script>
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -24,6 +20,9 @@
   <body>
     <div id="map"></div>
     <script>
+      // pass in 'data' from flask and convert to a JSON form
+      var coordinatesData = '{{ data }}';
+
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
@@ -35,31 +34,18 @@
         // Create a <script> tag and set the USGS URL as the source.
         var script = document.createElement('script');
 
-        // This example uses a local copy of the GeoJSON stored at
-        // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
-        // put the location of the JSON file or object
-        //script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
-
         script.src = coordinatesData;
 
-        // maybe do "document.getElementsByTagName('head')[0].appendChild(script);"
         document.getElementsByTagName('head')[0].appendChild(script);
 
       }
 
-      // results I guess is from document, document (and hence results) in this case is the actual GeoJSON file
-      // need to modify code above
       function eqfeed_callback(results) {
         var heatmapData = [];
         // features.length is the amount of locations in the geoJSON file
         // can modify code to fit array length of 'data' from flask
         for (var i = 0; i < results.features.length; i++) {
-          // coords get coordinates (lat. and long.) from results, which comes from document
-          // for example, the line below will get the coordinates from a location entry that has the field "geometry":
-          // ..., "geometry":{"type":"Point","coordinates":[-178.3725,-20.753,544.19]}, ...
-          var coords = results.features[i].geometry.coordinates;
-          // LatLng basically just takes a lat. and long., here it gets it from the coords var
-          var latLng = new google.maps.LatLng(coords[1], coords[0]);
+          var latLng = new google.maps.LatLng(results.lat, results.long);
           // from this line below its kinda obvious, its basically the actual heat map being created
           heatmapData.push(latLng);
         }
