--- a/templates/test.html
+++ b/templates/test.html
@@ -18,35 +18,54 @@
     </style>
   </head>
   <body>
-    <table class="table" id="expenses-list">
+    <div id="map"></div>
     <script>
-      var coordinatesData = '{{ data }}';
-      
+      // pass in 'data' from flask and convert to a JSON form
+      var coordinatesData = '{{ data|tojson }}';
       console.log(coordinatesData)
-      // const expList = document.querySelector("#expenses-list");
 
-      // for (coord in coordinatesData) {
-      //   var obj = JSON.parse(coord);
-    
-      //   //create html elements - 1 row and 3 cells
-      //   let tr = document.createElement('tr');
-      //   let name = document.createElement('td');
-      //   let cost = document.createElement('td');
-      //   let category = document.createElement('td');
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 2,
+          center: {lat: -33.865427, lng: 151.196123},
+          mapTypeId: 'roadmap'
+        });
 
-      //   //set html table cells according obj from database 
-      //   name.textContent = expArray[i];
-      //   cost.textContent = exp.cost;
-      //   category.textContent = exp.category;
+        // Create a <script> tag and set the USGS URL as the source.
+        var script = document.createElement('script');
 
-      //   //combine table cells into 1 row
-      //   tr.appendChild(name);
-      //   tr.appendChild(cost);
-      //   tr.appendChild(category);
+        script.src = coordinatesData;
 
-      //   //add row to expense list table
-      //   expList.appendChild(tr);
-      // }
+        document.getElementsByTagName('head')[0].appendChild(script);
+
+      }
+
+      // results I guess is from document, document (and hence results) in this case is the actual GeoJSON file
+      // need to modify code above
+      function eqfeed_callback(results) {
+        var heatmapData = [];
+        // features.length is the amount of locations in the geoJSON file
+        // can modify code to fit array length of 'data' from flask
+        for (var i = 0; i < results.features.length; i++) {
+          // coords get coordinates (lat. and long.) from results, which comes from document
+          // for example, the line below will get the coordinates from a location entry that has the field "geometry":
+          // ..., "geometry":{"type":"Point","coordinates":[-178.3725,-20.753,544.19]}, ...
+          var coords = results.features[i].geometry.coordinates;
+          // LatLng basically just takes a lat. and long., here it gets it from the coords var
+          var latLng = new google.maps.LatLng(coords[1], coords[0]);
+          // from this line below its kinda obvious, its basically the actual heat map being created
+          heatmapData.push(latLng);
+        }
+        var heatmap = new google.maps.visualization.HeatmapLayer({
+          data: heatmapData,
+          dissipating: false,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCS1pv3UNX5dWNp5o2bJm6q2j3iU33hbYQ&libraries=visualization&callback=initMap">
     </script>
   </body>
 </html>
