--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -54,7 +54,7 @@
       }
     </script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCS1pv3UNX5dWNp5o2bJm6q2j3iU33hbYQ&libraries=visualization&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=API-KEY-HERE&libraries=visualization&callback=initMap">
     </script>
   </body>
 </html>
