--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -17,6 +17,8 @@
   <body>
     <div id="map"></div>
     <script>
+      setInterval('window.location.reload()', 60 * 1000);
+
       var coordinatesData = '{{ data|tojson }}';
 
       var coordinateStr = coordinatesData.substring(1, coordinatesData.length - 1);
@@ -39,10 +41,10 @@
 
         for (var i = 0; i < results.length; i++) {
 
-          var weightedLatLng = {location: new google.maps.LatLng(results[i].long, results[i].lat), weight: results[i].Sentiment};
-          // var latLng = new google.maps.LatLng(results[i].long, results[i].lat);
+          // var weightedLatLng = {location: new google.maps.LatLng(results[i].long, results[i].lat), weight: results[i].Sentiment};
+          var latLng = new google.maps.LatLng(results[i].long, results[i].lat);
           
-          heatmapData.push(weightedLatLng);
+          heatmapData.push(latLng);
         }
 
         var heatmap = new google.maps.visualization.HeatmapLayer({
