--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -5,18 +5,46 @@
   <head>
     <!-- import jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
-    <h1>BLM Tracker</h1>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">BLM Tracker</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Resources
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Learn more</a>
+              <a class="dropdown-item" href="#">Sign petitions</a>
+              <a class="dropdown-item" href="#">Donate</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <div id="map"></div>
     <form action="/refresh/" method="post">
-      <button name="refresh" type="submit">Refresh</button>
+      <button name="refresh" type="submit" class="btn btn-outline-dark">Refresh</button>
     </form>
     <h6>Created by Parthiv Chigurupati, Stella Wang, and Amir Yalamov</h6>
     <script>
       //auto refresh page every t seconds = 10 minutes
-      const t = 30; 
+      const t = 600; 
 
       $(document).ready(function() {
         setInterval('refreshPage()', t * 1000);
@@ -51,11 +79,12 @@
         var heatmapData = [];
 
         for (var i = 0; i < results.length; i++) {
-
-          // var weightedLatLng = {location: new google.maps.LatLng(results[i].long, results[i].lat), weight: results[i].Sentiment};
-          var latLng = new google.maps.LatLng(results[i].long, results[i].lat);
           
-          heatmapData.push(latLng);
+          var weightedLatLng = {location: new google.maps.LatLng(results[i].long, results[i].lat), weight: results[i].Sentiment};
+          console.log(results[i].Sentiment)
+          // var latLng = new google.maps.LatLng(results[i].long, results[i].lat);
+          
+          heatmapData.push(weightedLatLng);
         }
 
         var heatmap = new google.maps.visualization.HeatmapLayer({
