--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -11,27 +11,17 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">BLM Tracker</a>
+      <a class="navbar-brand">BLM Tracker</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/MLH-Fellowship/0.1.1-BLM-Tracker">GitHub</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Resources
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Learn more</a>
-              <a class="dropdown-item" href="#">Sign petitions</a>
-              <a class="dropdown-item" href="#">Donate</a>
-            </div>
+            <a class="nav-link" href="https://blacklivesmatter.com/">Read More</a>
           </li>
         </ul>
       </div>
@@ -81,7 +71,6 @@
         for (var i = 0; i < results.length; i++) {
           
           var weightedLatLng = {location: new google.maps.LatLng(results[i].long, results[i].lat), weight: results[i].Sentiment};
-          console.log(results[i].Sentiment)
           // var latLng = new google.maps.LatLng(results[i].long, results[i].lat);
           
           heatmapData.push(weightedLatLng);
