finished front end / navbar

--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -21,6 +21,9 @@
             <a class="nav-link" href="https://github.com/MLH-Fellowship/0.1.1-BLM-Tracker">GitHub</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="https://blacklivesmatters.carrd.co/">Ways to help</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://blacklivesmatter.com/">Read More</a>
           </li>
         </ul>
